Agregar la vista de programas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="responsive.css">
   <link rel="stylesheet" href="power.css">
   <link rel="stylesheet" href="reposo.css">
+  <link rel="stylesheet" href="programas.css">
+
 
 
 </head>
