--- a/programas.html
+++ b/programas.html
@@ -125,7 +125,7 @@
 <!-- Menú inferior -->
 <div class="bottom-bar">
 
-    <button class="bottom-item" onclick="location.href='index.html'">
+    <button class="bottom-item" onclick="goToHome()">
         <img src="icons/casa.png" class="icon"><span>Inicio</span>
     </button>
 
@@ -138,6 +138,18 @@
     </button>
 
 </div>
+<!-- ⭐ BOTÓN FLOTANTE DEL ASISTENTE DE VOZ ⭐ -->
+<div id="voiceBtn" class="voice-floating-btn">
+    <span class="mic-icon">🎤</span>
+</div>
+<script>
+function goToHome() {
+    localStorage.setItem("returnToHome", "1");
+    location.href = "index.html";
+}
+</script>
 
+<script src="voice.js"></script>
 </body>
 </html>
+
