--- a/historial.html
+++ b/historial.html
@@ -23,7 +23,7 @@
 
 <div class="bottom-bar">
 
-    <button class="bottom-item" onclick="location.href='index.html'">
+    <button class="bottom-item" onclick="goToHome()">
         <img src="icons/casa.png" class="icon"><span>Inicio</span>
     </button>
 
@@ -37,7 +37,20 @@
 
 </div>
 
+<!-- ⭐ BOTÓN FLOTANTE DEL ASISTENTE DE VOZ ⭐ -->
+<div id="voiceBtn" class="voice-floating-btn">
+    <span class="mic-icon">🎤</span>
+</div>
 
+<script>
+function goToHome() {
+    localStorage.setItem("returnToHome", "1");
+    location.href = "index.html";
+}
+</script>
+<script src="voice.js"></script>
 
 </body>
 </html>
+
+
