--- a/programas.html
+++ b/programas.html
@@ -46,7 +46,6 @@
             <div class="program-left">
                 <h3>Colores</h3>
                 <p>Lavado equilibrado que evita desteñidos y conserva la intensidad del color.</p>
-
             </div>
             <div class="program-right">
                 <span class="time">1h 30m</span>
@@ -59,7 +58,6 @@
             <div class="program-left">
                 <h3>Ropa blanca</h3>
                 <p>Limpieza profunda con mayor temperatura para prendas claras y manchas difíciles.</p>
-
             </div>
             <div class="program-right">
                 <span class="time">1h 50m</span>
@@ -72,7 +70,6 @@
             <div class="program-left">
                 <h3>Ropa oscura</h3>
                 <p>Cuidado especial para tonos oscuros, evitando desgaste y pérdida de color.</p>
-
             </div>
             <div class="program-right">
                 <span class="time">1h 20m</span>
@@ -80,12 +77,11 @@
             </div>
         </div>
 
-        <!-- Toallas -->
+        <!-- Lavado Rápido -->
         <div class="program-card" onclick="selectProgram('Lavado Rápido')">
             <div class="program-left">
                 <h3>Lavado Rápido</h3>
                 <p>Ciclo de alta temperatura para higiene, suavidad y máxima absorción.</p>
-
             </div>
             <div class="program-right">
                 <span class="time">2h 10m</span>
@@ -93,11 +89,11 @@
             </div>
         </div>
 
-        <!-- Ropa deportiva -->
+        <!-- Centrifugar -->
         <div class="program-card" onclick="selectProgram('Centrifugar')">
             <div class="program-left">
                 <h3>Centrifugar</h3>
-                <p>Ciclo rápido para quitar la humedad y que las prendas estén un poco más secas</p>
+                <p>Ciclo rápido para quitar la humedad y que las prendas estén un poco más secas.</p>
             </div>
             <div class="program-right">
                 <span class="time">1h 5m</span>
@@ -110,7 +106,6 @@
             <div class="program-left">
                 <h3>Ropa de bebé</h3>
                 <p>Lavado higiénico con aclarado extra para pieles sensibles.</p>
-
             </div>
             <div class="program-right">
                 <span class="time">1h 40m</span>
@@ -138,18 +133,26 @@
     </button>
 
 </div>
+
 <!-- ⭐ BOTÓN FLOTANTE DEL ASISTENTE DE VOZ ⭐ -->
 <div id="voiceBtn" class="voice-floating-btn">
     <span class="mic-icon">🎤</span>
 </div>
+
 <script>
 function goToHome() {
     localStorage.setItem("returnToHome", "1");
     location.href = "index.html";
 }
+
+/* ✔ FUNCIÓN AÑADIDA PARA IR A PERSONALIZAR */
+function selectProgram(programName) {
+    localStorage.setItem("selectedProgram", programName);
+    location.href = "personalizarPrograma.html"; 
+}
 </script>
 
 <script src="voice.js"></script>
+
 </body>
 </html>
-
