Algunos cambiecitos para que guarde sesion

--- a/historial.html
+++ b/historial.html
@@ -7,20 +7,84 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="responsive.css">
   <link rel="stylesheet" href="power.css">
-
+  <link rel="stylesheet" href="historial.css">
 </head>
+
 <body>
 
 <div class="header-row">
     <div></div>
     <div class="title-group">
-        <h1 class="title">Historial</h1>
-        <h2 class="subtitle">Lavados recientes</h2>
+        <h1 class="title">GAM Wash Pro</h1>
+        <h2 class="subtitle">Historial de lavadas</h2>
     </div>
 </div>
 
-<h2 class="title">No hay lavados aún.</h2>
+<!-- 🔥 TARJETAS DE ESTADÍSTICAS -->
+<div class="stats-container">
 
+    <div class="stat-card">
+        <h3 class="stat-value" id="totalLavadas">5</h3>
+        <p class="stat-label">Total de Lavadas</p>
+    </div>
+
+    <div class="stat-card">
+        <h3 class="stat-value" id="tempProm">35ºC</h3>
+        <p class="stat-label">Temp. Promedio</p>
+    </div>
+
+    <div class="stat-card">
+        <h3 class="stat-value" id="durProm">2.1h</h3>
+        <p class="stat-label">Duración Promedio</p>
+    </div>
+
+</div>
+
+<!-- 🔥 LISTA DE LAVADOS -->
+<div class="wash-list">
+
+    <div class="wash-card">
+        <div class="wash-header">
+            <h3>Algodón</h3>
+            <span class="badge">Completo</span>
+        </div>
+
+        <div class="wash-info">
+            <span class="info-item">📅 01/11/2025</span>
+            <span class="info-item">⏱ 2h 30min</span>
+            <span class="info-item">🌡 40ºC</span>
+        </div>
+    </div>
+
+    <div class="wash-card">
+        <div class="wash-header">
+            <h3>Lavado Rápido</h3>
+            <span class="badge">Completo</span>
+        </div>
+
+        <div class="wash-info">
+            <span class="info-item">📅 03/11/2025</span>
+            <span class="info-item">⏱ 30min</span>
+            <span class="info-item">🌡 30ºC</span>
+        </div>
+    </div>
+
+    <div class="wash-card">
+        <div class="wash-header">
+            <h3>Delicado</h3>
+            <span class="badge">Completo</span>
+        </div>
+
+        <div class="wash-info">
+            <span class="info-item">📅 05/11/2025</span>
+            <span class="info-item">⏱ 1h 15min</span>
+            <span class="info-item">🌡 30ºC</span>
+        </div>
+    </div>
+
+</div>
+
+<!-- 🔥 MENÚ INFERIOR -->
 <div class="bottom-bar">
 
     <button class="bottom-item" onclick="goToHome()">
@@ -31,13 +95,13 @@
         <img src="icons/engranaje.png" class="icon"><span>Programas</span>
     </button>
 
-    <button class="bottom-item active" onclick="location.href='historial.html'">
+    <button class="bottom-item active">
         <img src="icons/historico.png" class="icon"><span>Historial</span>
     </button>
 
 </div>
 
-<!-- ⭐ BOTÓN FLOTANTE DEL ASISTENTE DE VOZ ⭐ -->
+<!-- Asistente de voz -->
 <div id="voiceBtn" class="voice-floating-btn">
     <span class="mic-icon">🎤</span>
 </div>
@@ -48,9 +112,8 @@ function goToHome() {
     location.href = "index.html";
 }
 </script>
+
 <script src="voice.js"></script>
 
 </body>
 </html>
-
-
