--- a/historial.html
+++ b/historial.html
@@ -101,11 +101,16 @@
 
 </div>
 
-<!-- Asistente de voz -->
-<div id="voiceBtn" class="voice-floating-btn">
-    <span class="mic-icon">🎤</span>
-</div>
+  <!-- ASISTENTE GAM PREMIUM -->
+<div class="assistant-wrapper">
+    <div id="voiceBtn" class="assistant-btn">
+        <span class="mic-icon">🎤</span>
+    </div>
 
+    <div id="assistantBubble" class="assistant-bubble">
+        Habla con GAM ✨
+    </div>
+</div>
 <script>
 function goToHome() {
     localStorage.setItem("returnToHome", "1");
