--- a/index.html
+++ b/index.html
@@ -105,10 +105,23 @@
     </div>
 
   </div>
-  <!-- ⭐ BOTÓN FLOTANTE DEL ASISTENTE GAM ⭐ -->
-  <div id="voiceBtn" class="voice-floating-btn">
-    <span class="mic-icon">🎤</span>
+
+<div class="assistant-wrapper">
+  <div id="voiceBtn" class="assistant-btn">
+      <span class="mic-icon">🎤</span>
   </div>
+  <div id="assistantBubble" class="assistant-bubble">
+      Habla con GAM ✨
+  </div>
+</div>
+
+
+<div id="assistantMessage" class="assistant-message hidden"></div>
+
+<div id="transitionOverlay" class="full-transition hidden"></div>
+
+
+
 
     <!-- Menú inferior -->
     <div class="bottom-bar">
