--- a/personalizarPrograma.html
+++ b/personalizarPrograma.html
@@ -93,6 +93,16 @@
     </div>
 
 </div>
+<!-- ASISTENTE GAM PREMIUM -->
+<div class="assistant-wrapper">
+    <div id="voiceBtn" class="assistant-btn">
+        <span class="mic-icon">🎤</span>
+    </div>
+
+    <div id="assistantBubble" class="assistant-bubble">
+        Personaliza tu ciclo con GAM ✨
+    </div>
+</div>
 
 <!-- BOTONES -->
 <div class="button-row" style="margin-top: 20px;">
@@ -101,7 +111,7 @@
 </div>
 
 <script src="sessionManager.js"></script>
-
+<script src="voice.js"></script>
 <script>
 /* -------------------------------------------------------
    🔥 CARGAR NOMBRE DEL PROGRAMA DESDE LOCALSTORAGE
