--- a/programas.html
+++ b/programas.html
@@ -129,9 +129,15 @@
 
 </div>
 
-<!-- ⭐ BOTÓN FLOTANTE DEL ASISTENTE DE VOZ ⭐ -->
-<div id="voiceBtn" class="voice-floating-btn">
-    <span class="mic-icon">🎤</span>
+  <!-- ASISTENTE GAM PREMIUM -->
+<div class="assistant-wrapper">
+    <div id="voiceBtn" class="assistant-btn">
+        <span class="mic-icon">🎤</span>
+    </div>
+
+    <div id="assistantBubble" class="assistant-bubble">
+        Habla con GAM ✨
+    </div>
 </div>
 
 <script>
